[tool.poetry]
name = "PulseEstimator"
version = "0.1.0"
description = ""
authors = ["Yudai Miyashita <yudai.miyashita@persol.co.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.5.3"
mediapipe = "^0.8.8"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"